--- a/MDHS/src/client/view/RegisterFXML.fxml
+++ b/MDHS/src/client/view/RegisterFXML.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.RegisterFXMLController">
+<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.RegisterFXMLController">
    <children>
       <Label layoutX="171.0" layoutY="5.0" text="Maleny Dairy to Home System">
          <font>
@@ -24,7 +24,7 @@
             <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <GridPane layoutX="108.0" layoutY="79.0" prefHeight="229.0" prefWidth="343.0">
+      <GridPane layoutX="108.0" layoutY="71.0" prefHeight="251.0" prefWidth="343.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="223.0" minWidth="10.0" prefWidth="118.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="227.0" />
@@ -35,6 +35,7 @@
             <RowConstraints maxHeight="55.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="56.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="59.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="61.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="61.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="48.0" minHeight="10.0" prefHeight="48.0" vgrow="SOMETIMES" />
          </rowConstraints>
@@ -51,8 +52,10 @@
             <Label text="Phone Number" GridPane.rowIndex="4" />
             <TextField fx:id="phonenumberTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="addressTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Label text="Staff Member" GridPane.rowIndex="6" />
-            <CheckBox fx:id="adminCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <Label text="Staff Member" GridPane.rowIndex="7" />
+            <CheckBox fx:id="adminCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label text="Postcode" GridPane.rowIndex="6" />
+            <TextField fx:id="postcodeTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
       </GridPane>
       <Button fx:id="registerButton" layoutX="224.0" layoutY="328.0" mnemonicParsing="false" onAction="#registerButtonHandler" prefHeight="27.0" prefWidth="105.0" style="-fx-background-color: #9fb96c;" text="Register">
