--- a/MDHS/src/client/view/PlaceOrderFXML.fxml
+++ b/MDHS/src/client/view/PlaceOrderFXML.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -11,10 +12,14 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.PlaceOrderFXMLController">
+<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.PlaceOrderFXMLController">
    <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="84.0" layoutX="15.0" layoutY="265.0" stroke="BLACK" strokeType="INSIDE" width="336.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="178.0" layoutX="13.0" layoutY="82.0" stroke="BLACK" strokeType="INSIDE" width="336.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="178.0" layoutX="353.0" layoutY="82.0" stroke="BLACK" strokeType="INSIDE" width="233.0" />
       <Label layoutX="154.0" layoutY="8.0" text="Maleny Dairy to Home System">
          <font>
             <Font name="System Bold" size="18.0" />
@@ -25,28 +30,29 @@
             <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <Button fx:id="dashboardButton" layoutX="14.0" layoutY="353.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="27.0" prefWidth="115.0" text="&lt; Dashboard">
+      <Button fx:id="dashboardButton" layoutX="14.0" layoutY="359.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="27.0" prefWidth="115.0" text="&lt; Dashboard">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <GridPane layoutX="58.0" layoutY="110.0" prefHeight="79.0" prefWidth="271.0">
+      <GridPane layoutX="30.0" layoutY="164.0" prefHeight="35.0" prefWidth="302.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="69.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="10.0" prefWidth="202.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="126.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="10.0" prefWidth="46.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="10.0" prefWidth="193.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="10.0" prefWidth="48.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints maxHeight="41.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Label text="Quantity" GridPane.rowIndex="1" />
-            <Label text="Product" />
-            <ChoiceBox fx:id="productChoiseBox" prefWidth="150.0" GridPane.columnIndex="1" />
-            <TextField fx:id="quantityTextField" prefHeight="25.0" prefWidth="170.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="quantityTextField" prefHeight="25.0" prefWidth="74.0" promptText="Quantity" />
+            <Label text=" @" GridPane.columnIndex="1" />
+            <TextField fx:id="productPriceTextField" editable="false" prefHeight="25.0" prefWidth="146.0" promptText="Unit Price" GridPane.columnIndex="2" />
+            <Label text=" ea." GridPane.columnIndex="3" />
          </children>
       </GridPane>
-      <GridPane layoutX="215.0" layoutY="365.0" prefHeight="30.0" prefWidth="171.0">
+      <GridPane layoutX="89.0" layoutY="205.0" prefHeight="53.0" prefWidth="183.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="81.0" minWidth="10.0" prefWidth="45.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="84.0" minWidth="10.0" prefWidth="32.0" />
@@ -69,32 +75,74 @@
             <Label prefHeight="17.0" prefWidth="21.0" text="  of" GridPane.columnIndex="2" />
          </children>
       </GridPane>
-      <Button fx:id="addOrderItemButton" layoutX="412.0" layoutY="275.0" mnemonicParsing="false" onAction="#addOrderItemButtonHandler" prefHeight="39.0" prefWidth="42.0" text="+">
+      <Button fx:id="addOrderItemButton" layoutX="294.0" layoutY="212.0" mnemonicParsing="false" onAction="#addOrderItemButtonHandler" prefHeight="39.0" prefWidth="42.0" text="+">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button fx:id="removeOrderItemButton" layoutX="146.0" layoutY="275.0" mnemonicParsing="false" onAction="#removeOrderItemButtonHandler" prefHeight="35.0" prefWidth="41.0" text="-">
+      <Button fx:id="removeOrderItemButton" layoutX="24.0" layoutY="212.0" mnemonicParsing="false" onAction="#removeOrderItemButtonHandler" prefHeight="35.0" prefWidth="41.0" text="-">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Label layoutX="36.0" layoutY="191.0" text="Delivery Time" />
-      <Label layoutX="388.0" layoutY="108.0" text="Subtotal" />
-      <Label layoutX="366.0" layoutY="143.0" text="Delivery Fee" />
-      <Label layoutX="409.0" layoutY="177.0" text="Tax" />
-      <Label layoutX="372.0" layoutY="214.0" text="Total Cost" />
-      <Button fx:id="placeOrderButton" layoutX="194.0" layoutY="275.0" mnemonicParsing="false" onAction="#placeOrderButtonHandler" prefHeight="39.0" prefWidth="212.0" style="-fx-background-color: #9fb96c;" text="Place Order" />
-      <TextField fx:id="subtotalTextField" layoutX="445.0" layoutY="104.0" prefHeight="25.0" prefWidth="115.0" />
-      <TextField fx:id="deliveryCostTextField" layoutX="445.0" layoutY="139.0" prefHeight="25.0" prefWidth="115.0" />
-      <TextField fx:id="taxTextField" layoutX="445.0" layoutY="173.0" prefHeight="25.0" prefWidth="115.0" />
-      <TextField fx:id="deliveryTimeTextField" layoutX="126.0" layoutY="187.0" prefHeight="25.0" prefWidth="202.0" />
-      <TextField fx:id="totalCostTextField" layoutX="445.0" layoutY="210.0" prefHeight="25.0" prefWidth="115.0" />
-      <Button fx:id="cancelOrderButton" layoutX="257.0" layoutY="328.0" mnemonicParsing="false" onAction="#cancelOrderButtonHandler" text="Cancel Order" />
+      <Button fx:id="placeOrderButton" layoutX="364.0" layoutY="270.0" mnemonicParsing="false" onAction="#placeOrderButtonHandler" prefHeight="53.0" prefWidth="212.0" style="-fx-background-color: #9fb96c;" text="Place Order" />
+      <Button fx:id="cancelOrderButton" layoutX="389.0" layoutY="336.0" mnemonicParsing="false" onAction="#cancelOrderButtonHandler" prefHeight="25.0" prefWidth="162.0" text="Cancel Order" />
       <ImageView fitHeight="53.0" fitWidth="105.0" layoutX="6.0" layoutY="8.0">
          <image>
             <Image url="@../resources/mfd.png" />
          </image>
       </ImageView>
+      <Label layoutX="120.0" layoutY="88.0" text="Order Items">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <ChoiceBox fx:id="productChoiceBox" layoutX="32.0" layoutY="127.0" prefHeight="25.0" prefWidth="302.0" />
+      <Label layoutX="140.0" layoutY="270.0" text="Delivery">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <GridPane layoutX="25.0" layoutY="306.0" prefHeight="35.0" prefWidth="315.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="115.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="18.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="80.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="8.0" prefWidth="12.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="10.0" prefWidth="93.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <ComboBox fx:id="hourComboBox" prefHeight="25.0" prefWidth="76.0" promptText="Hours" GridPane.columnIndex="2" />
+            <ComboBox fx:id="minuteComboBox" prefHeight="25.0" prefWidth="86.0" promptText="Minutes" GridPane.columnIndex="4" />
+            <Label prefHeight="17.0" prefWidth="24.0" text=" : " GridPane.columnIndex="3" />
+            <TextField fx:id="deliveryDayTextField" editable="false" prefHeight="25.0" prefWidth="141.0" />
+            <Label prefHeight="17.0" prefWidth="21.0" text=" @" GridPane.columnIndex="1" />
+         </children>
+      </GridPane>
+      <GridPane layoutX="364.0" layoutY="92.0" prefHeight="162.0" prefWidth="212.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="101.0" minWidth="10.0" prefWidth="78.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="134.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TextField fx:id="subtotalTextField" editable="false" prefHeight="25.0" prefWidth="115.0" GridPane.columnIndex="1" />
+            <Label text="Subtotal" />
+            <Label text="Delivery Fee" GridPane.rowIndex="1" />
+            <TextField fx:id="deliveryCostTextField" editable="false" prefHeight="25.0" prefWidth="115.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="Tax (10%)" GridPane.rowIndex="2" />
+            <TextField fx:id="taxTextField" editable="false" prefHeight="25.0" prefWidth="115.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="Total Cost" GridPane.rowIndex="3" />
+            <TextField fx:id="totalCostTextField" editable="false" prefHeight="25.0" prefWidth="115.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
