--- a/MDHS/src/client/view/ManageProductFXML.fxml
+++ b/MDHS/src/client/view/ManageProductFXML.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ManageProductFXMLController">
+<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ManageProductFXMLController">
    <children>
       <Label layoutX="171.0" layoutY="8.0" text="Maleny Dairy to Home System">
          <font>
@@ -32,21 +32,21 @@
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="75.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints maxHeight="41.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="16.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="113.0" minHeight="10.0" prefHeight="108.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="41.0" minHeight="10.0" prefHeight="36.80001220703125" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="38.39998779296875" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="32.60001831054687" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="113.0" minHeight="10.0" prefHeight="95.20001220703126" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField fx:id="nameTextField" editable="false" GridPane.columnIndex="1" />
-            <TextField fx:id="quantityTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="priceTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="nameTextField" GridPane.columnIndex="1" />
+            <TextField fx:id="quantityTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="priceTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="Product Name" />
             <Label text="Details" GridPane.rowIndex="1" />
             <Label text="Price" GridPane.rowIndex="2" />
             <Label text="Ingredients" GridPane.rowIndex="3" />
-            <TextArea fx:id="ingredientsTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="unitTextField" editable="false" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <TextArea fx:id="ingredientsTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="unitTextField" GridPane.columnIndex="2" GridPane.rowIndex="1" />
          </children>
       </GridPane>
       <Button fx:id="dashboardButton" layoutX="14.0" layoutY="359.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="17.0" prefWidth="116.0" text="&lt; Dashboard">
@@ -103,12 +103,7 @@
       </Button>
       <Button fx:id="updateButton" layoutX="491.0" layoutY="261.0" mnemonicParsing="false" onAction="#updateButtonHandler" prefHeight="27.0" prefWidth="77.0" text="Update" />
       <Button fx:id="deleteButton" layoutX="491.0" layoutY="298.0" mnemonicParsing="false" onAction="#deleteButtonHandler" prefHeight="27.0" prefWidth="77.0" text="Delete" />
-      <Button fx:id="searchButton" layoutX="181.0" layoutY="359.0" mnemonicParsing="false" onAction="#searchButtonHandler" prefHeight="30.0" prefWidth="99.0" text="Search">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Button fx:id="newButton" layoutX="304.0" layoutY="359.0" mnemonicParsing="false" onAction="#newButtonHandler" prefHeight="30.0" prefWidth="116.0" text="New">
+      <Button fx:id="newButton" layoutX="181.0" layoutY="359.0" mnemonicParsing="false" onAction="#newButtonHandler" prefHeight="30.0" prefWidth="239.0" text="New">
          <font>
             <Font size="14.0" />
          </font>
